[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptbtest-echobot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "AlexHorta", email = "buey.horta@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
"python-telegram-bot",
"ptbtest @ https://test-files.pythonhosted.org/packages/97/0c/fb02764ae84857c4912c92c2daedb4157399b08fab49d9f0a254bd56ed0d/ptbtest-1.3.0.dev1-py3-none-any.whl"
]

[project.urls]
Documentation = "https://github.com/ptbtest-dev/ptbtest-echobot#readme"
Issues = "https://github.com/ptbtest-dev/ptbtest-echobot/issues"
Source = "https://github.com/ptbtest-dev/ptbtest-echobot"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["src/ptbtest_echobot", "tests"]
branch = true
parallel = true
omit = [
  "__about__.py",
]

[tool.coverage.paths]
ptbtest_echobot = ["src/ptbtest_echobot", "*/ptbtest-echobot/src/ptbtest_echobot"]
tests = ["tests", "*/ptbtest-echobot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
