[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptbtest-echobot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "AlexHorta", email = "buey.horta@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
"python-telegram-bot",
"ptbtest @ https://test-files.pythonhosted.org/packages/a3/ad/c201dc69c4e4d6f8fac3e3c0dfdc53decf222edc8d041667ed5d2699ae85/ptbtest-1.3.0.dev3-py3-none-any.whl"
]


[project.urls]
Documentation = "https://github.com/ptbtest-dev/ptbtest-echobot#readme"
Issues = "https://github.com/ptbtest-dev/ptbtest-echobot/issues"
Source = "https://github.com/ptbtest-dev/ptbtest-echobot"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.lint]
skip-install = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["src/ptbtest_echobot", "tests"]
branch = true
parallel = true
omit = [
  "__about__.py",
]

[tool.coverage.paths]
ptbtest_echobot = ["src/ptbtest_echobot", "*/ptbtest-echobot/src/ptbtest_echobot"]
tests = ["tests", "*/ptbtest-echobot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
